--- a/pipeline_base/s3-automate-deploy/registry-vm/playbook/roles/docker/tasks/main.yml
+++ b/pipeline_base/s3-automate-deploy/registry-vm/playbook/roles/docker/tasks/main.yml
@@ -21,22 +21,20 @@
     - gnupg2
     - software-properties-common
 
-- name:  Add Docker key to the list of trusted APT keys.
-  shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-  args:
-    executable: /bin/bash
-    warn: False
+- name: Add Docker GPG apt key
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    state: present
 
-  
-- name: Add docker to APT repo. 
-  shell: add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-  #ignore_errors: True    
+- name: Add Docker repository
+  apt_repository:
+    repo: deb https://download.docker.com/linux/ubuntu focal stable
+    state: present
 
-
-- name: Update repositories cache. 
+- name: Update repositories cache.
   apt:
-    update_cache: yes    
-
+    update_cache: yes
+  
     
 - name: Install Docker packages. 
   apt:
@@ -46,7 +44,6 @@
     - docker-ce 
     - docker-ce-cli
     - containerd.io
-    
     
 - name: Add users to docker group. 
   shell: "usermod -aG docker {{ item }}"
