--- a/lu.uni.e4l.platform.api.dev/Dockerfile
+++ b/lu.uni.e4l.platform.api.dev/Dockerfile
@@ -1,3 +1,3 @@
-FROM openjdk:20-jdk-slim
+FROM eclipse-temurin:20-alpine
 COPY build/libs/e4l-server.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
