--- a/lu.uni.e4l.platform.api.dev/build.gradle
+++ b/lu.uni.e4l.platform.api.dev/build.gradle
@@ -59,3 +59,10 @@ dependencies {
 tasks.withType(JavaCompile) {
     options.compilerArgs += ["-Xlint:deprecation", "-Xlint:-options"]
 }
+
+tasks.withType(Test) {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
