--- a/lu.uni.e4l.platform.api.dev/.gitlab-ci.yml
+++ b/lu.uni.e4l.platform.api.dev/.gitlab-ci.yml
@@ -16,20 +16,13 @@ build:
   cache:
     key: gradle-cache
     paths:
-      - .gradle/wrapper
-      - .gradle/caches
-  # TODO
-  # before_script:
-  #   - gradle wrapper
-  #   - chmod +x ./gradlew
+      - .gradle
   script:
-    - ./gradlew clean assemble bootJar -x test --build-cache --no-daemon
+    - gradle clean bootJar -x test --build-cache --no-daemon
   artifacts:
     name: "backend-build-$CI_COMMIT_SHORT_SHA"
     paths:
-      - build/libs/       # Contains the JAR
-      - build/classes/    # Contains compiled code (speeds up test stage)
-      - build/resources/  # Contains properties/xml files
+      - build
     expire_in: 1 week
 
 test:
@@ -42,13 +35,12 @@ test:
   cache:
     key: gradle-cache
     paths:
-      - .gradle/wrapper
-      - .gradle/caches
+      - .gradle
   needs:
     - job: build
       artifacts: true
   script:
-    - ./gradlew test --no-daemon
+    - gradle test --no-daemon --info
 
 package:
   image: docker:latest
