--- a/lu.uni.e4l.platform.api.dev/.gitlab-ci.yml
+++ b/lu.uni.e4l.platform.api.dev/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build:
     name: "backend-build-$CI_COMMIT_SHORT_SHA"
     paths:
       - build
-    expire_in: 1 week
+    expire_in: 1 hour
 
 test:
   image: gradle:8.3-jdk17
@@ -41,10 +41,25 @@ test:
       artifacts: true
   script:
     - gradle test --no-daemon
+  artifacts:
+    when: always  # Save results even if tests fail
+    paths:
+      - build/reports/tests/test/
+    reports:
+      junit: build/test-results/test/**/TEST-*.xml
+    expire_in: 1 week
 
 package:
-  image: docker:latest
+  image: docker:29.1.3-cli
   stage: commit
+  services:
+    - name: docker:29.1.3-dind
+      alias: docker
+      command: ["--storage-driver=overlay2"]
+  variables:
+    DOCKER_DRIVER: overlay2
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_TLS_CERTDIR: ""
   tags:
     - docker-runner
   needs:
@@ -53,8 +68,9 @@ package:
     - job: build
       artifacts: true
   before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
+    # - docker info | grep "Storage Driver"
     # - ls -R build/libs/
+    - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
   script:
     - docker build -t $CI_REGISTRY_IMAGE:latest .
     - docker push $CI_REGISTRY_IMAGE:latest
