--- a/pipeline_base/s2-automate-build/integration-server/Vagrantfile
+++ b/pipeline_base/s2-automate-build/integration-server/Vagrantfile
@@ -28,6 +28,8 @@ Vagrant.configure("2") do |config|
   # NOTE: This will enable public access to the opened port
   # config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.network "forwarded_port", guest: 8088, host: 8080
+  config.vm.network "forwarded_port", guest: 8084, host: 8084 # Staging
+  config.vm.network "forwarded_port", guest: 8085, host: 8085 # Production
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine and only allow access
