Started implementation of frontend pipeline

--- a/lu.uni.e4l.platform.api.dev/docker/docker-compose.nginx.prod.yml
+++ b/lu.uni.e4l.platform.api.dev/docker/docker-compose.nginx.prod.yml
@@ -2,7 +2,7 @@ name: e4l-nginx-backend-prod
 
 services:
   e4l-nginx-backend-prod:
-    image: nginx:alpine
+    image: nginx:1.28-alpine
     container_name: e4l-nginx-backend-prod
     ports:
       - "8090:80"
