--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -28,10 +28,13 @@ Vagrant.configure("2") do |config|
   # NOTE: This will enable public access to the opened port
   # config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.network "forwarded_port", guest: 8088, host: 8080
+
   config.vm.network "forwarded_port", guest: 8084, host: 8084 # Backend Staging
   config.vm.network "forwarded_port", guest: 8085, host: 8085 # Backend Production (Blue)
   config.vm.network "forwarded_port", guest: 8086, host: 8086 # Backend Production (Green)
   config.vm.network "forwarded_port", guest: 8090, host: 8090 # Backend Released (Nginx - either Blue or Green)
+  
+  config.vm.network "forwarded_port", guest: 8884, host: 8884 # Frontend Staging
   
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine and only allow access
