--- a/lu.uni.e4l.platform.frontend.dev/e4l.frontend.docker/docker-compose.frontend.staging.yml
+++ b/lu.uni.e4l.platform.frontend.dev/e4l.frontend.docker/docker-compose.frontend.staging.yml
@@ -1,7 +1,7 @@
-version: "3.5"
+name: e4l-frontend-staging
 
 services:
-  e4l-frontend:
+  e4l-frontend-staging:
     restart: always
     image: ${CI_REGISTRY_IMAGE}:latest
     container_name: e4l-frontend-staging
@@ -10,6 +10,8 @@ services:
     volumes:
       - /opt/e4l-news:/usr/share/nginx/news
     environment:
-      - PUBLIC_PATH=/e4l
-      - API_URL=https://juno.uni.lux/e4lapi
+      # - PUBLIC_PATH=/e4l
+      - PUBLIC_PATH=
+      # - API_URL=${STAGING_API_URL}
+      - API_URL=http://localhost:8084/e4lapi
       - TZ=Europe/Luxembourg
