--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -35,6 +35,9 @@ Vagrant.configure("2") do |config|
   config.vm.network "forwarded_port", guest: 8090, host: 8090 # Backend Released (Nginx - either Blue or Green)
   
   config.vm.network "forwarded_port", guest: 8884, host: 8884 # Frontend Staging
+  config.vm.network "forwarded_port", guest: 8885, host: 8885 # Frontend Production (Blue)
+  config.vm.network "forwarded_port", guest: 8886, host: 8886 # Frontend Production (Green)
+  config.vm.network "forwarded_port", guest: 8890, host: 8890 # Frontend Released (Nginx - either Blue or Green)
   
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine and only allow access
