--- a/lu.uni.e4l.platform.frontend.dev/e4l.frontend.docker/docker-compose.frontend.staging.yml
+++ b/lu.uni.e4l.platform.frontend.dev/e4l.frontend.docker/docker-compose.frontend.staging.yml
@@ -8,10 +8,17 @@ services:
     ports:
       - 8884:80
     volumes:
-      - /opt/e4l-news:/usr/share/nginx/news
+      - /opt/e4l-news-staging:/usr/share/nginx/news
     environment:
       # - PUBLIC_PATH=/e4l
       - PUBLIC_PATH=
       # - API_URL=${STAGING_API_URL}
       - API_URL=http://localhost:8084/e4lapi
       - TZ=Europe/Luxembourg
+    networks:
+      - e4l-frontend-net-staging
+
+networks:
+  e4l-frontend-net-staging:
+    external: false
+    name: e4l-frontend-net-staging
