First version of complete automation

--- a/VM/playbook/roles/docker/tasks/main.yml
+++ b/VM/playbook/roles/docker/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 
+##########################################
+# Docker Installation
+##########################################
+
 - name: Update repositories cache. 
   apt:
     update_cache: yes
