--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -1,34 +1,20 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
-Vagrant.configure("2") do |config|
-  # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
-  # https://docs.vagrantup.com.
+# Modify these variables if needed
+VM_IP = "192.168.56.9"
+BACKEND_VM_PATH = "/repositories/lu.uni.e4l.platform.api.dev"
+FRONTEND_VM_PATH = "/repositories/lu.uni.e4l.platform.frontend.dev"
 
-  # Every Vagrant development environment requires a box. You can search for
-  # boxes at https://vagrantcloud.com/search.
+Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/jammy64"
   config.vm.hostname = "devops-exam"
   
   ENV['LC_ALL']="en_US.UTF-8"
 
-  # Disable automatic box update checking. If you disable this, then
-  # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
-  # config.vm.box_check_update = false
-
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:8080" will access port 80 on the guest machine.
-  # NOTE: This will enable public access to the opened port
-  # config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.network "forwarded_port", guest: 8088, host: 8080
 
+  # Modify the host ports if they are already in use on your machine
   config.vm.network "forwarded_port", guest: 8084, host: 8084 # Backend Staging
   config.vm.network "forwarded_port", guest: 8085, host: 8085 # Backend Production (Blue)
   config.vm.network "forwarded_port", guest: 8086, host: 8086 # Backend Production (Green)
@@ -38,56 +24,36 @@ Vagrant.configure("2") do |config|
   config.vm.network "forwarded_port", guest: 8885, host: 8885 # Frontend Production (Blue)
   config.vm.network "forwarded_port", guest: 8886, host: 8886 # Frontend Production (Green)
   config.vm.network "forwarded_port", guest: 8890, host: 8890 # Frontend Released (Nginx - either Blue or Green)
-  
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine and only allow access
-  # via 127.0.0.1 to disable public access
-  # config.vm.network "forwarded_port", guest: 8088, host: 8080, host_ip: "127.0.0.1"
 
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.56.9"
+  # Mount local project directories
+  config.vm.synced_folder "../lu.uni.e4l.platform.api.dev", BACKEND_VM_PATH
+  config.vm.synced_folder "../lu.uni.e4l.platform.frontend.dev", FRONTEND_VM_PATH
 
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-  # config.vm.network "public_network"
+  config.vm.network "private_network", ip: VM_IP
 
-  # Share an additional folder to the guest VM. The first argument is
-  # the path on the host to the actual folder. The second argument is
-  # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-  # config.vm.synced_folder "../../data", "/vagrant_data"
-
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  #
-   config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-   	  # vb.gui = true
-  
-     # Customize the amount of memory on the VM:
-      vb.memory = 8 * 1024
-    	vb.cpus = 4
-   end
-  #
-  # View the documentation for the provider you are using for more
-  # information on available options.
-
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
-  # documentation for more information about their specific syntax and use.	
-  
-  config.vm.provision "shell", inline: <<-SHELL
-     	sudo apt-get update
-     	# apt-get install -y default-jre
-  	# apt-get install -y apache2
-   	SHELL
-   
-  config.vm.provision "ansible" do |ansible|
-    	ansible.playbook = "./playbook/playbook.yml"
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = 8 * 1024
+    vb.cpus = 4
   end
-   
+
+  config.vm.provision "shell", inline: <<-SHELL
+    sudo apt-get update
+   	SHELL
+
+  config.vm.provision "primary_ansible", type: "ansible" do |ansible|
+    ansible.playbook = "./playbook/primary.yml"
+    ansible.extra_vars = {
+      gitlab_domain: VM_IP,
+      backend_VM_path: BACKEND_VM_PATH,
+      frontend_VM_path: FRONTEND_VM_PATH
+    }
+  end
+
+  # config.vm.provision "secondary_ansible", type: "ansible", run: "never" do |ansible|
+  #   ansible.playbook = "./playbook/secondary.yml"
+  #   ansible.extra_vars = {
+  #     gitlab_domain: VM_IP
+  #   }
+  # end
    
 end
