--- a/VM/playbook/roles/gitlab/tasks/main.yml
+++ b/VM/playbook/roles/gitlab/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 
+##########################################
+# GitLab Installation
+##########################################
+
 - name: "Create Downloads folder"
   file:
     path: "{{ destination }}"
@@ -60,6 +64,9 @@
     state: present
   when: not gitlab_file.stat.exists
 
+##########################################
+# Registry SSL Configuration
+##########################################
 
 - name: "Create /etc/gitlab/ssl directory"
   file:
@@ -138,6 +145,9 @@
   command: gitlab-ctl restart
   when: gitlab_ctl.stat.exists
 
+##########################################
+# Docker SSL Configuration
+##########################################
 
 - name: "Create Docker certificate directory for registry"
   file:
