--- a/lu.uni.e4l.platform.frontend.dev/e4l.frontend.docker/docker-compose.frontend.prod.green.yml
+++ b/lu.uni.e4l.platform.frontend.dev/e4l.frontend.docker/docker-compose.frontend.prod.green.yml
@@ -11,8 +11,7 @@ services:
       - /opt/e4l-news-prod:/usr/share/nginx/news
     environment:
       - PUBLIC_PATH=
-      # - API_URL=${PROD_API_URL}
-      - API_URL=http://localhost:8090/e4lapi
+      - API_URL=${PROD_API_URL}
       - TZ=Europe/Luxembourg
     networks:
       - e4l-frontend-net-prod
