--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -42,6 +42,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "primary_ansible", type: "ansible" do |ansible|
     ansible.playbook = "./playbook/primary.yml"
+    ansible.ask_vault_pass = true
     ansible.extra_vars = {
       gitlab_domain: VM_IP,
       backend_VM_path: BACKEND_VM_PATH,
