--- a/VM/playbook/primary.yml
+++ b/VM/playbook/primary.yml
@@ -4,7 +4,9 @@
   remote_user: vagrant
   become: yes
   become_method: sudo
-    
+  
+  vars_files:
+    - group_vars/vault.yml
   
   vars:
     vHome: /home/vagrant
