--- a/lu.uni.e4l.platform.api.dev/.gitlab-ci.yml
+++ b/lu.uni.e4l.platform.api.dev/.gitlab-ci.yml
@@ -7,6 +7,9 @@ stages:
 ####   COMMIT STAGE   ####
 ##########################
 build:
+  rules:
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   image: gradle:8.3-jdk17
   stage: commit
   tags:
@@ -26,6 +29,9 @@ build:
     expire_in: 1 hour
 
 test:
+  rules:
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   image: gradle:8.3-jdk17
   stage: commit
   tags:
@@ -50,6 +56,9 @@ test:
     expire_in: 1 week
 
 package:
+  rules:
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   image: docker:29.1.3-cli
   stage: commit
   services:
@@ -79,6 +88,9 @@ package:
 ####   STAGING STAGE   ####
 ###########################
 deploy_staging:
+  rules:
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   stage: staging
   tags:
     - shell-runner
@@ -97,8 +109,14 @@ deploy_staging:
     - docker compose -f ./docker/docker-compose.backend.staging.yml up -d
     # Smoke test
     - for i in {1..20}; do curl -sf http://localhost:8084/e4lapi/questionnaire && exit 0 || (echo "Waiting for backend... (Attempt $i/20)" && sleep 5); done; exit 1
+  environment:
+    name: staging
+    url: http://localhost:8084/e4lapi/
 
 system_test:
+  rules:
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   stage: staging
   tags:
     - shell-runner
@@ -108,8 +126,9 @@ system_test:
     # TODO
     - echo "System tests here"
 
-# TODO: Maybe promote to production only on manual trigger
 promote_image:
+  rules:
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   image: docker:29.1.3-cli
   stage: staging
   services:
@@ -130,11 +149,14 @@ promote_image:
     - docker pull "$CI_REGISTRY_IMAGE:latest"
     - docker tag "$CI_REGISTRY_IMAGE:latest" "$CI_REGISTRY_IMAGE:release"
     - docker push "$CI_REGISTRY_IMAGE:release"
+  when: manual
 
 ##############################
 ####   PRODUCTION STAGE   ####
 ##############################
 deploy_production:
+  rules:
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   stage: production
   tags:
     - shell-runner
@@ -183,6 +205,8 @@ deploy_production:
   when: manual
 
 release:
+  rules:
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   stage: production
   tags:
     - shell-runner
@@ -211,8 +235,13 @@ release:
     - echo "Release completed"
     - echo "Service is now live on http://localhost:8090/e4lapi/"
   when: manual
+  environment:
+    name: production
+    url: http://localhost:8090/e4lapi/
 
 rollback:
+  rules:
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   stage: production
   tags:
     - shell-runner
@@ -237,6 +266,6 @@ rollback:
     - for i in {1..10}; do curl -sf http://localhost:8090/e4lapi/questionnaire && break || (echo "Testing nginx... ($i/10)" && sleep 5); done
     - echo "Rollback completed"
   when: manual
-  # environment:
-  #   name: production
-  #   action: rollback
+  environment:
+    name: production
+    url: http://localhost:8090/e4lapi/
