--- a/lu.uni.e4l.platform.frontend.dev/.gitlab-ci.yml
+++ b/lu.uni.e4l.platform.frontend.dev/.gitlab-ci.yml
@@ -7,6 +7,9 @@ stages:
 ####   COMMIT STAGE   ####
 ##########################
 build:
+  rules:
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   image: node:18
   stage: commit
   tags:
@@ -21,6 +24,9 @@ build:
     expire_in: 1 hour
 
 package:
+  rules:
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   image: docker:29.1.3-cli
   stage: commit
   services:
@@ -46,6 +52,9 @@ package:
 ####   STAGING STAGE   ####
 ###########################
 deploy_staging:
+  rules:
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   stage: staging
   tags:
     - shell-runner
@@ -57,11 +66,13 @@ deploy_staging:
     - docker pull "$CI_REGISTRY_IMAGE:latest"
     - docker compose -f ./e4l.frontend.docker/docker-compose.frontend.staging.yml pull
     - docker compose -f ./e4l.frontend.docker/docker-compose.frontend.staging.yml up -d
-  # environment:
-  #   name: staging
-  #   url: https://juno.uni.lux/e4l/
+  environment:
+    name: staging
+    url: http://localhost:8884/
 
 promote_image:
+  rules:
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   image: docker:29.1.3-cli
   stage: staging
   services:
@@ -82,16 +93,19 @@ promote_image:
     - docker pull "$CI_REGISTRY_IMAGE:latest"
     - docker tag "$CI_REGISTRY_IMAGE:latest" "$CI_REGISTRY_IMAGE:release"
     - docker push "$CI_REGISTRY_IMAGE:release"
+  when: manual
 
 ##############################
 ####   PRODUCTION STAGE   ####
 ##############################
 deploy_production:
+  rules:
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   stage: production
   tags:
     - shell-runner
   needs:
-    - job: deploy_staging
+    - job: promote_image
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
   script:
@@ -107,6 +121,9 @@ deploy_production:
         echo "Blue and green deployment completed"
         echo "Blue listening on http://localhost:8885/"
         echo "Green listening on http://localhost:8886/"
+        # Default to green on first deployment for the environment
+        echo "DYNAMIC_ENVIRONMENT_PORT=8886" >> deploy_production.env
+        echo "COLOR_DEPLOYED=green" >> deploy_production.env
         echo "Note: Nginx router not started - run 'release' job to make frontend publicly available"
         exit 0
       fi
@@ -119,22 +136,33 @@ deploy_production:
         docker compose -f ./e4l.frontend.docker/docker-compose.frontend.prod.green.yml up -d
         echo "Green deployment completed"
         echo "Service listening on http://localhost:8886/"
+        echo "DYNAMIC_ENVIRONMENT_PORT=8886" >> deploy_production.env
+        echo "COLOR_DEPLOYED=green" >> deploy_production.env
       else
         echo "Green is currently released, deploying to blue environment"
         docker compose -f ./e4l.frontend.docker/docker-compose.frontend.prod.blue.yml pull
         docker compose -f ./e4l.frontend.docker/docker-compose.frontend.prod.blue.yml up -d
         echo "Blue deployment completed"
         echo "Service listening on http://localhost:8885/"
+        echo "DYNAMIC_ENVIRONMENT_PORT=8885" >> deploy_production.env
+        echo "COLOR_DEPLOYED=blue" >> deploy_production.env
       fi
+  artifacts:
+    reports:
+      dotenv: deploy_production.env
   when: manual
 
+
 release:
+  rules:
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   stage: production
   tags:
     - shell-runner
   needs:
     - job: deploy_production
   before_script:
+    - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
     # Ensure nginx is running
     - docker compose -f ./e4l.frontend.docker/docker-compose.nginx-router.prod.yml up -d
   script:
@@ -155,13 +183,20 @@ release:
     - echo "Release completed"
     - echo "Service is now live on http://localhost:8890/"
   when: manual
+  environment:
+    name: production
+    url: http://localhost:8890/
 
 rollback:
+  rules:
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   stage: production
   tags:
     - shell-runner
   needs:
     - job: release
+  before_script:
+    - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
   script:
     # Check which environment is currently active in the running nginx container
     - |
@@ -179,3 +214,6 @@ rollback:
     - docker compose -f ./e4l.frontend.docker/docker-compose.nginx-router.prod.yml up -d --force-recreate
     - echo "Rollback completed"
   when: manual
+  environment:
+    name: production
+    url: http://localhost:8890/
